// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage header component should be rendered correctly provided app 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <img
      alt="photos-icon"
      className="sto-app-icon"
      src="https://mockcozy.cc/registry/photos/3.0.0/icon.svg"
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Cozy Photos
    </h2>
    <p
      className="sto-app-header-description"
    />
    <Link
      className="c-btn c-btn--regular"
      replace={false}
      to="//myapps/photos/manage"
    >
      <span>
        <Icon
          className="sto-app-icon--button"
          color="#FFFFFF"
          height="16px"
          icon="test-file-stub"
          width="16px"
        />
         
        Install on my Cozy
      </span>
    </Link>
  </div>
</div>
`;

exports[`ApplicationPage header component should be rendered correctly provided app with broken icon and no editor 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <Icon
      className="sto-app-icon--default blurry"
      color="#95999D"
      height="88px"
      icon="test-file-stub"
      width="88px"
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Photos
    </h2>
    <p
      className="sto-app-header-description"
    />
    <Link
      className="c-btn c-btn--regular"
      replace={false}
      to="//myapps/photos/manage"
    >
      <span>
        <Icon
          className="sto-app-icon--button"
          color="#FFFFFF"
          height="16px"
          icon="test-file-stub"
          width="16px"
        />
         
        Install on my Cozy
      </span>
    </Link>
  </div>
</div>
`;

exports[`ApplicationPage header component should be rendered correctly provided konnector 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <img
      alt="konnector-trinlane-icon"
      className="sto-app-icon"
      src="https://mockcozy.cc/registry/konnector-trinlane/0.1.0/icon.svg"
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Trinlane
    </h2>
    <p
      className="sto-app-header-description"
    />
    <Link
      className="c-btn c-btn--regular"
      replace={false}
      to="//myapps/konnector-trinlane/manage"
    >
      <span>
        <Icon
          className="sto-app-icon--button"
          color="#FFFFFF"
          height="16px"
          icon="test-file-stub"
          width="16px"
        />
         
        Install on my Cozy
      </span>
    </Link>
  </div>
</div>
`;
